Actualización de desarrollo

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1095,7 +1095,7 @@ header#site-header {
 			/* Improve rendering */
 			text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 			text-rendering: optimizeLegibility !important;
-			-webkit-font-smoothing: antialiased !important;
+			-webkit-font-smoothing: antialiased !important;			
 			margin-bottom: 20px;
 			line-height: 140%;
 			@include at-breakpoint($mobile-h) {
@@ -2031,9 +2031,10 @@ header#site-header {
 			margin-bottom: 20px;
 		}
 		p {
+			/* Improve rendering */
 			text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 			text-rendering: optimizeLegibility !important;
-			-webkit-font-smoothing: antialiased !important;		
+			-webkit-font-smoothing: antialiased !important;			
 			margin-bottom: 15px;
 			line-height: 150%;
 		}
@@ -2225,11 +2226,12 @@ aside#sidebar {
 			}
 		}
 		p {
+			/* Improve rendering */
 			text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 			text-rendering: optimizeLegibility !important;
-			-webkit-font-smoothing: antialiased !important;
+			-webkit-font-smoothing: antialiased !important;			
 			line-height: 140%;
-			font-size: 16px;
+			font-size: 16px; 
 			margin-bottom: 30px;
 		}
 		#dossier-sumary {
